# python-outdented

./: README.md  outdent.pth  outdent.py  pyproject.toml  setup.cfg  setup.py
