[tool.poetry]
name = "python-outdented"
version = "0.1.0"
description = "It's still python but something is different"
authors = ["Artur Czepiel"]
license = "MIT"
keywords = ["fun", "codec", "indent"]
readme = "README.md"
repository = "https://github.com/artcz/python-outdented"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = [ { include = "outdent" } ]
include = ["outdent.pth"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
